Update nightly artifacts

--- a/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-broker.yaml
+++ b/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-broker.yaml
@@ -17,7 +17,7 @@ metadata:
   name: config-kafka-broker-data-plane
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+    app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
   annotations:
     knative.dev/example-checksum: "57a32008"
 data:
@@ -123,7 +123,7 @@ data:
     # ssl.truststore.location=
     # ssl.truststore.password=
     allow.auto.create.topics=true
-    auto.offset.reset=earliest
+    auto.offset.reset=latest
     client.dns.lookup=use_all_dns_ips
     connections.max.idle.ms=540000
     default.api.timeout.ms=2000
@@ -198,10 +198,10 @@ kind: ClusterRole
 metadata:
   name: knative-kafka-broker-data-plane
   labels:
-    kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+    app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
 rules:
   - apiGroups:
-      - "*"
+      - ""
     resources:
       - secrets
     verbs:
@@ -229,7 +229,7 @@ metadata:
   name: knative-kafka-broker-data-plane
   namespace: knative-eventing
   labels:
-    kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+    app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
 
 ---
 # Copyright 2020 The Knative Authors
@@ -250,7 +250,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-kafka-broker-data-plane
   labels:
-    kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+    app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
 subjects:
   - kind: ServiceAccount
     name: knative-kafka-broker-data-plane
@@ -281,7 +281,9 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-broker-dispatcher
-    kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+    app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
+    app.kubernetes.io/component: kafka-broker-dispatcher
+    app.kubernetes.io/name: knative-eventing
 spec:
   selector:
     matchLabels:
@@ -291,7 +293,9 @@ spec:
       name: kafka-broker-dispatcher
       labels:
         app: kafka-broker-dispatcher
-        kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+        app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
+        app.kubernetes.io/component: kafka-broker-dispatcher
+        app.kubernetes.io/name: knative-eventing
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes and zones.
       topologySpreadConstraints:
@@ -315,7 +319,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: kafka-broker-dispatcher
-          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher:v20220907-a895dd53
+          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher:v20230313-f8737a4b
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
@@ -375,7 +379,10 @@ spec:
               value: "8"
             - name: JAVA_TOOL_OPTIONS
               value: "-XX:+CrashOnOutOfMemoryError"
-          # TODO set resources (limits and requests)
+          resources:
+            requests:
+              cpu: 200m
+              memory: 300Mi
           livenessProbe:
             failureThreshold: 3
             tcpSocket:
@@ -398,8 +405,12 @@ spec:
           terminationMessagePath: /dev/temination-log
           securityContext:
             allowPrivilegeEscalation: false
-            privileged: false
             readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
       volumes:
         - name: config-kafka-broker-data-plane
           configMap:
@@ -441,7 +452,9 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-broker-receiver
-    kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+    app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
+    app.kubernetes.io/component: kafka-broker-receiver
+    app.kubernetes.io/name: knative-eventing
 spec:
   selector:
     matchLabels:
@@ -451,7 +464,9 @@ spec:
       name: kafka-broker-receiver
       labels:
         app: kafka-broker-receiver
-        kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+        app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
+        app.kubernetes.io/component: kafka-broker-receiver
+        app.kubernetes.io/name: knative-eventing
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes and zones.
       topologySpreadConstraints:
@@ -475,7 +490,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: kafka-broker-receiver
-          image: gcr.io/knative-nightly/knative-kafka-broker-receiver:v20220907-a895dd53
+          image: gcr.io/knative-nightly/knative-kafka-broker-receiver:v20230313-f8737a4b
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
@@ -536,7 +551,10 @@ spec:
               value: "8"
             - name: JAVA_TOOL_OPTIONS
               value: "-XX:+CrashOnOutOfMemoryError"
-          # TODO set resources (limits and requests)
+          resources:
+            requests:
+              cpu: 200m
+              memory: 450Mi
           livenessProbe:
             failureThreshold: 3
             httpGet:
@@ -561,8 +579,12 @@ spec:
           terminationMessagePath: /dev/temination-log
           securityContext:
             allowPrivilegeEscalation: false
-            privileged: false
             readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
       volumes:
         - name: kafka-broker-brokers-triggers
           configMap:
@@ -587,7 +609,9 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-broker-receiver
-    kafka.eventing.knative.dev/release: "a895dd53d3c4448ec0ec21b18bf330bd13b89210"
+    app.kubernetes.io/version: "f8737a4bac968d89290f63d26f7595a280e8d730"
+    app.kubernetes.io/component: kafka-broker-receiver
+    app.kubernetes.io/name: knative-eventing
 spec:
   selector:
     app: kafka-broker-receiver
