--- a/installation/manifests/upstream-nightly/eventing/eventing-post-install.yaml
+++ b/installation/manifests/upstream-nightly/eventing/eventing-post-install.yaml
@@ -17,9 +17,9 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-post-install-job-role
   labels:
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
 rules:
   # Storage version upgrader needs to be able to patch CRDs.
   - apiGroups:
@@ -139,8 +139,8 @@ metadata:
   name: knative-eventing-post-install-job
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -148,8 +148,8 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-post-install-job-role-binding
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -184,8 +184,8 @@ metadata:
     app: "storage-version-migration-eventing"
     app.kubernetes.io/name: knative-eventing
     app.kubernetes.io/component: storage-version-migration-job
-    app.kubernetes.io/version: "20220907-fae8544d8"
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
+    eventing.knative.dev/release: "v20230314-5988c4278"
 spec:
   ttlSecondsAfterFinished: 600
   backoffLimit: 10
@@ -195,8 +195,8 @@ spec:
         app: "storage-version-migration-eventing"
         app.kubernetes.io/name: knative-eventing
         app.kubernetes.io/component: storage-version-migration-job
-        app.kubernetes.io/version: "20220907-fae8544d8"
-        eventing.knative.dev/release: "v20220907-fae8544d8"
+        app.kubernetes.io/version: "20230314-5988c4278"
+        eventing.knative.dev/release: "v20230314-5988c4278"
       annotations:
         sidecar.istio.io/inject: "false"
     spec:
@@ -204,7 +204,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: migrate
-          image: gcr.io/knative-nightly/knative.dev/pkg/apiextensions/storageversion/cmd/migrate@sha256:307038fea3673b73c5318b0f04600c4f7924b6a5edfa9afa1296fc2751e16be4
+          image: gcr.io/knative-nightly/knative.dev/pkg/apiextensions/storageversion/cmd/migrate@sha256:5927e66f73cdb822ec9e6b71046c573e1c06700b0ad95081ec485cbdd54d7fad
           args:
             - "apiserversources.sources.knative.dev"
             - "brokers.eventing.knative.dev"
@@ -224,6 +224,8 @@ spec:
             runAsNonRoot: true
             capabilities:
               drop:
-                - all
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
 
 ---
