--- a/installation/manifests/upstream-nightly/eventing/mt-channel-broker.yaml
+++ b/installation/manifests/upstream-nightly/eventing/mt-channel-broker.yaml
@@ -16,8 +16,8 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-channel-broker-controller
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 rules:
   # Configs resources and status we care about.
@@ -59,8 +59,8 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
@@ -101,8 +101,8 @@ metadata:
   name: mt-broker-filter
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 
 ---
@@ -124,8 +124,8 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
@@ -165,8 +165,8 @@ metadata:
   name: mt-broker-ingress
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 
 ---
@@ -189,8 +189,8 @@ kind: ClusterRoleBinding
 metadata:
   name: eventing-mt-channel-broker-controller
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -221,8 +221,8 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -253,8 +253,8 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -286,9 +286,9 @@ metadata:
   name: mt-broker-filter
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -298,9 +298,9 @@ spec:
     metadata:
       labels:
         eventing.knative.dev/brokerRole: filter
-        eventing.knative.dev/release: "v20220907-fae8544d8"
+        eventing.knative.dev/release: "v20230314-5988c4278"
         app.kubernetes.io/component: broker-filter
-        app.kubernetes.io/version: "20220907-fae8544d8"
+        app.kubernetes.io/version: "20230314-5988c4278"
         app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-filter
@@ -308,7 +308,7 @@ spec:
       containers:
         - name: filter
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/filter@sha256:46072eae52e511dbe884542a47875688d669eebab55aa12c815e303164a82639
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/filter@sha256:0ce6bace8104167c5673959d1c61cb992e8462a2d94e6c4a83feb308dad07d25
           readinessProbe: &probe
             failureThreshold: 3
             httpGet:
@@ -364,16 +364,18 @@ spec:
             runAsNonRoot: true
             capabilities:
               drop:
-                - all
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
     eventing.knative.dev/brokerRole: filter
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
   name: broker-filter
   namespace: knative-eventing
@@ -411,9 +413,9 @@ metadata:
   name: mt-broker-ingress
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -423,9 +425,9 @@ spec:
     metadata:
       labels:
         eventing.knative.dev/brokerRole: ingress
-        eventing.knative.dev/release: "v20220907-fae8544d8"
+        eventing.knative.dev/release: "v20230314-5988c4278"
         app.kubernetes.io/component: broker-ingress
-        app.kubernetes.io/version: "20220907-fae8544d8"
+        app.kubernetes.io/version: "20230314-5988c4278"
         app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-ingress
@@ -433,7 +435,7 @@ spec:
       containers:
         - name: ingress
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/ingress@sha256:c7fb8e5212d64259216fb10530937d0126402b20798bc6a211fab8bfcec8959e
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/ingress@sha256:e1058462aa63ea40c036ebf882b0b2ae97f27314295911421f0d38012cd424d8
           readinessProbe: &probe
             failureThreshold: 3
             httpGet:
@@ -489,16 +491,18 @@ spec:
             runAsNonRoot: true
             capabilities:
               drop:
-                - all
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
     eventing.knative.dev/brokerRole: ingress
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
   name: broker-ingress
   namespace: knative-eventing
@@ -536,9 +540,9 @@ metadata:
   name: mt-broker-controller
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
     app.kubernetes.io/component: mt-broker-controller
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -548,9 +552,9 @@ spec:
     metadata:
       labels:
         app: mt-broker-controller
-        eventing.knative.dev/release: "v20220907-fae8544d8"
+        eventing.knative.dev/release: "v20230314-5988c4278"
         app.kubernetes.io/component: broker-controller
-        app.kubernetes.io/version: "20220907-fae8544d8"
+        app.kubernetes.io/version: "20230314-5988c4278"
         app.kubernetes.io/name: knative-eventing
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes.
@@ -568,7 +572,7 @@ spec:
       containers:
         - name: mt-broker-controller
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/mtchannel_broker@sha256:c68390c0307d58fe9ef4644010c96d08d83283f58298085015b7b34eb839f5de
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/mtchannel_broker@sha256:eb4e983a5251e22482a7008902e2ca3610a5cf1f2a78cd55db68c317a8891b9d
           resources:
             requests:
               cpu: 100m
@@ -594,7 +598,9 @@ spec:
             runAsNonRoot: true
             capabilities:
               drop:
-                - all
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
           ports:
             - name: metrics
               containerPort: 9090
@@ -616,15 +622,15 @@ spec:
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: broker-ingress-hpa
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
@@ -641,15 +647,15 @@ spec:
           type: Utilization
           averageUtilization: 70
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: broker-filter-hpa
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v20220907-fae8544d8"
+    eventing.knative.dev/release: "v20230314-5988c4278"
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20220907-fae8544d8"
+    app.kubernetes.io/version: "20230314-5988c4278"
     app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
