--- a/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-channel.yaml
+++ b/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-channel.yaml
@@ -17,7 +17,7 @@ metadata:
   name: config-kafka-channel-data-plane
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
   annotations:
     knative.dev/example-checksum: "6ce544b6"
 data:
@@ -197,7 +197,7 @@ kind: ClusterRole
 metadata:
   name: knative-kafka-channel-data-plane
   labels:
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
 rules:
   - apiGroups:
       - ""
@@ -207,6 +207,12 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - serviceaccounts/token
+    verbs:
+      - create
 
 ---
 # Copyright 2021 The Knative Authors
@@ -228,7 +234,7 @@ metadata:
   name: knative-kafka-channel-data-plane
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
 
 ---
 # Copyright 2021 The Knative Authors
@@ -249,7 +255,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-kafka-channel-data-plane
   labels:
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
 subjects:
   - kind: ServiceAccount
     name: knative-kafka-channel-data-plane
@@ -280,7 +286,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-channel-dispatcher
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
     app.kubernetes.io/component: kafka-channel-dispatcher
     app.kubernetes.io/name: knative-eventing
 spec:
@@ -292,7 +298,7 @@ spec:
       name: kafka-channel-dispatcher
       labels:
         app: kafka-channel-dispatcher
-        app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+        app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
         app.kubernetes.io/component: kafka-channel-dispatcher
         app.kubernetes.io/name: knative-eventing
     spec:
@@ -318,7 +324,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: kafka-channel-dispatcher
-          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher:v20230727-8a22c92d
+          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher@sha256:36644d16f67b2cbd52d318f0ac3491de061a1a816723bf77797299a25af89a10
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
@@ -451,7 +457,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-channel-receiver
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
     app.kubernetes.io/component: kafka-channel-receiver
     app.kubernetes.io/name: knative-eventing
 spec:
@@ -463,7 +469,7 @@ spec:
       name: kafka-channel-receiver
       labels:
         app: kafka-channel-receiver
-        app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+        app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
         app.kubernetes.io/component: kafka-channel-receiver
         app.kubernetes.io/name: knative-eventing
     spec:
@@ -489,7 +495,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: kafka-channel-receiver
-          image: gcr.io/knative-nightly/knative-kafka-broker-receiver:v20230727-8a22c92d
+          image: gcr.io/knative-nightly/knative-kafka-broker-receiver@sha256:9ca89d80cc09a79a7125c1e64858eb926cb3d328d888325bf0a87c2b0d91e375
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
@@ -620,7 +626,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-channel-receiver
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "fa114876d5fa62a82c3250fdccaadefdd3658953"
     app.kubernetes.io/component: kafka-channel-receiver
     app.kubernetes.io/name: knative-eventing
 spec:
