--- a/installation/manifests/upstream-nightly/eventing/mt-channel-broker.yaml
+++ b/installation/manifests/upstream-nightly/eventing/mt-channel-broker.yaml
@@ -16,7 +16,7 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-channel-broker-controller
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 rules:
   # Configs resources and status we care about.
@@ -58,12 +58,14 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
       - eventing.knative.dev
     resources:
+      - brokers
+      - brokers/status
       - triggers
       - triggers/status
     verbs:
@@ -78,6 +80,12 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - "serviceaccounts/token"
+    verbs:
+      - create
 
 ---
 # Copyright 2023 The Knative Authors
@@ -129,7 +137,7 @@ metadata:
   name: mt-broker-filter
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 
 ---
@@ -151,7 +159,7 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
@@ -208,6 +216,37 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - "serviceaccounts/token"
+    resourceNames:
+      - "mt-broker-ingress-oidc"
+    verbs:
+      - create
+
+---
+# Copyright 2023 The Knative Authors
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: mt-broker-ingress-oidc
+  namespace: knative-eventing
+  labels:
+    app.kubernetes.io/version: "20240225-f1c731235"
+    app.kubernetes.io/name: knative-eventing
 
 ---
 # Copyright 2020 The Knative Authors
@@ -229,7 +268,7 @@ metadata:
   name: mt-broker-ingress
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 
 ---
@@ -252,7 +291,7 @@ kind: ClusterRoleBinding
 metadata:
   name: eventing-mt-channel-broker-controller
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -283,7 +322,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -343,7 +382,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -404,7 +443,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -415,7 +454,7 @@ spec:
       labels:
         eventing.knative.dev/brokerRole: filter
         app.kubernetes.io/component: broker-filter
-        app.kubernetes.io/version: "20230727-ffa591593"
+        app.kubernetes.io/version: "20240225-f1c731235"
         app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-filter
@@ -423,8 +462,8 @@ spec:
       containers:
         - name: filter
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/filter@sha256:d3d417cdbdd63ef7df81b6ad0ae221c2fce8c0c98e194007986c961d27ac847d
-          readinessProbe: &probe
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/filter@sha256:c178ceb69df0181ed5acf114c9e70e24e85611aa1861db4ade85e15de6fbcefe
+          readinessProbe:
             failureThreshold: 3
             httpGet:
               path: /healthz
@@ -434,7 +473,14 @@ spec:
             successThreshold: 1
             timeoutSeconds: 1
           livenessProbe:
-            !!merge <<: *probe
+            failureThreshold: 3
+            httpGet:
+              path: /healthz
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 2
+            successThreshold: 1
+            timeoutSeconds: 1
             initialDelaySeconds: 5
           resources:
             requests:
@@ -494,7 +540,7 @@ metadata:
   labels:
     eventing.knative.dev/brokerRole: filter
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
   name: broker-filter
   namespace: knative-eventing
@@ -537,7 +583,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -548,7 +594,7 @@ spec:
       labels:
         eventing.knative.dev/brokerRole: ingress
         app.kubernetes.io/component: broker-ingress
-        app.kubernetes.io/version: "20230727-ffa591593"
+        app.kubernetes.io/version: "20240225-f1c731235"
         app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-ingress
@@ -556,8 +602,8 @@ spec:
       containers:
         - name: ingress
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/ingress@sha256:eb88ba217b52db3eb2eda82bc840f2307b578877d393a0766a5b91686e257715
-          readinessProbe: &probe
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/ingress@sha256:0d56b6f4043e4ab7aa47b2cb566c80ba82710095305f8b150574b166f9fd6741
+          readinessProbe:
             failureThreshold: 3
             httpGet:
               path: /healthz
@@ -567,7 +613,14 @@ spec:
             successThreshold: 1
             timeoutSeconds: 1
           livenessProbe:
-            !!merge <<: *probe
+            failureThreshold: 3
+            httpGet:
+              path: /healthz
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 2
+            successThreshold: 1
+            timeoutSeconds: 1
             initialDelaySeconds: 5
           resources:
             requests:
@@ -627,7 +680,7 @@ metadata:
   labels:
     eventing.knative.dev/brokerRole: ingress
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
   name: broker-ingress
   namespace: knative-eventing
@@ -670,7 +723,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: mt-broker-controller
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -681,7 +734,7 @@ spec:
       labels:
         app: mt-broker-controller
         app.kubernetes.io/component: broker-controller
-        app.kubernetes.io/version: "20230727-ffa591593"
+        app.kubernetes.io/version: "20240225-f1c731235"
         app.kubernetes.io/name: knative-eventing
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes.
@@ -699,7 +752,7 @@ spec:
       containers:
         - name: mt-broker-controller
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/mtchannel_broker@sha256:0ac6d0956cb573ebb6ed4f1c04549cd6bc29122046c7aac33270e8d93678a043
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/mtchannel_broker@sha256:71703812732ebbf96c780c7994153d5322932d17ce22e4026ba708497200499e
           resources:
             requests:
               cpu: 100m
@@ -756,7 +809,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
@@ -780,7 +833,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20240225-f1c731235"
     app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
