Update midstream nightly image
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/installation/manifests/product-nightly/000-subscription-serverless.yaml
+++ b/installation/manifests/product-nightly/000-subscription-serverless.yaml
@@ -10,7 +10,7 @@ metadata:
   namespace: openshift-marketplace
 spec:
   displayName: Serverless Operator
-  image: registry.ci.openshift.org/knative/openshift-serverless-nightly:serverless-index
+  image: registry.ci.openshift.org/knative/main:serverless-index
   publisher: Red Hat
   sourceType: grpc
 ---
