--- a/installation/manifests/upstream-nightly/000-subscription-amq-streams.yaml
+++ b/installation/manifests/upstream-nightly/000-subscription-amq-streams.yaml
@@ -4,7 +4,7 @@ metadata:
   name: amq-streams
   namespace: openshift-operators
 spec:
-  channel: stable
+  channel: amq-streams-2.6.x
   name: amq-streams
   source: redhat-operators
   sourceNamespace: openshift-marketplace
