--- a/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-source.yaml
+++ b/installation/manifests/upstream-nightly/eventing-kafka-broker/eventing-kafka-source.yaml
@@ -17,7 +17,7 @@ metadata:
   name: config-kafka-source-data-plane
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "5a9465023fdc7ca44eb27713077d0114ed7f3838"
   annotations:
     knative.dev/example-checksum: "8157ecb1"
 data:
@@ -178,7 +178,7 @@ kind: ClusterRole
 metadata:
   name: knative-kafka-source-data-plane
   labels:
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "5a9465023fdc7ca44eb27713077d0114ed7f3838"
 rules:
   - apiGroups:
       - ""
@@ -188,6 +188,12 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - serviceaccounts/token
+    verbs:
+      - create
 
 ---
 # Copyright 2021 The Knative Authors
@@ -209,7 +215,7 @@ metadata:
   name: knative-kafka-source-data-plane
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "5a9465023fdc7ca44eb27713077d0114ed7f3838"
 
 ---
 # Copyright 2021 The Knative Authors
@@ -230,7 +236,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-kafka-source-data-plane
   labels:
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "5a9465023fdc7ca44eb27713077d0114ed7f3838"
 subjects:
   - kind: ServiceAccount
     name: knative-kafka-source-data-plane
@@ -261,7 +267,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app: kafka-source-dispatcher
-    app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+    app.kubernetes.io/version: "5a9465023fdc7ca44eb27713077d0114ed7f3838"
     app.kubernetes.io/component: kafka-source-dispatcher
     app.kubernetes.io/name: knative-eventing
 spec:
@@ -275,7 +281,7 @@ spec:
       name: kafka-source-dispatcher
       labels:
         app: kafka-source-dispatcher
-        app.kubernetes.io/version: "8a22c92df90fbe82c8714d00c5ee5842cd3a37b9"
+        app.kubernetes.io/version: "5a9465023fdc7ca44eb27713077d0114ed7f3838"
         app.kubernetes.io/component: kafka-channel-dispatcher
         app.kubernetes.io/name: knative-eventing
         app.kubernetes.io/kind: kafka-dispatcher
@@ -299,10 +305,10 @@ spec:
               weight: 100
       serviceAccountName: knative-kafka-source-data-plane
       securityContext:
-        runAsNonRoot: true
+        runAsUser: 1001
       containers:
         - name: kafka-source-dispatcher
-          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher:v20230727-8a22c92d
+          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher-loom@sha256:8b07466b397175e1c50fccbe19e31c197bc8e032a51926e8f1e616397c475803
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
