--- a/installation/manifests/upstream-nightly/eventing/mt-channel-broker.yaml
+++ b/installation/manifests/upstream-nightly/eventing/mt-channel-broker.yaml
@@ -16,7 +16,7 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-channel-broker-controller
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 rules:
   # Configs resources and status we care about.
@@ -38,6 +38,12 @@ rules:
       - "delete"
       - "patch"
       - "watch"
+  - apiGroups:
+      - eventing.knative.dev
+    resources:
+      - brokers
+    verbs:
+      - "knsubscribe"
 
 ---
 # Copyright 2020 The Knative Authors
@@ -58,14 +64,26 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
       - eventing.knative.dev
     resources:
+      - brokers
+      - brokers/status
       - triggers
       - triggers/status
+      - eventpolicies
+    verbs:
+      - get
+      - list
+      - watch
+  # get subscription of trigger for AuthZ
+  - apiGroups:
+      - messaging.knative.dev
+    resources:
+      - subscriptions
     verbs:
       - get
       - list
@@ -78,6 +96,21 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - "serviceaccounts/token"
+    verbs:
+      - create
+  - apiGroups:
+      - "eventing.knative.dev"
+    resources:
+      - "eventtypes"
+    verbs:
+      - "get"
+      - "list"
+      - "watch"
+      - "create"
 
 ---
 # Copyright 2023 The Knative Authors
@@ -129,7 +162,7 @@ metadata:
   name: mt-broker-filter
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 
 ---
@@ -151,7 +184,7 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
@@ -167,6 +200,7 @@ rules:
       - eventing.knative.dev
     resources:
       - brokers
+      - eventpolicies
     verbs:
       - get
       - list
@@ -208,6 +242,37 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - "serviceaccounts/token"
+    resourceNames:
+      - "mt-broker-ingress-oidc"
+    verbs:
+      - create
+
+---
+# Copyright 2023 The Knative Authors
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: mt-broker-ingress-oidc
+  namespace: knative-eventing
+  labels:
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
+    app.kubernetes.io/name: knative-eventing
 
 ---
 # Copyright 2020 The Knative Authors
@@ -229,7 +294,7 @@ metadata:
   name: mt-broker-ingress
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 
 ---
@@ -252,7 +317,7 @@ kind: ClusterRoleBinding
 metadata:
   name: eventing-mt-channel-broker-controller
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -283,7 +348,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -343,7 +408,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -404,8 +469,9 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
+    bindings.knative.dev/exclude: "true"
 spec:
   selector:
     matchLabels:
@@ -415,7 +481,7 @@ spec:
       labels:
         eventing.knative.dev/brokerRole: filter
         app.kubernetes.io/component: broker-filter
-        app.kubernetes.io/version: "20230727-ffa591593"
+        app.kubernetes.io/version: "20241019-6aa49dc1d"
         app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-filter
@@ -423,8 +489,8 @@ spec:
       containers:
         - name: filter
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/filter@sha256:d3d417cdbdd63ef7df81b6ad0ae221c2fce8c0c98e194007986c961d27ac847d
-          readinessProbe: &probe
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/filter@sha256:ca62d34387c22a674c407155374a31611e846157ec8cfaaaee08d55137dbef44
+          readinessProbe:
             failureThreshold: 3
             httpGet:
               path: /healthz
@@ -434,7 +500,14 @@ spec:
             successThreshold: 1
             timeoutSeconds: 1
           livenessProbe:
-            !!merge <<: *probe
+            failureThreshold: 3
+            httpGet:
+              path: /healthz
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 2
+            successThreshold: 1
+            timeoutSeconds: 1
             initialDelaySeconds: 5
           resources:
             requests:
@@ -494,7 +567,7 @@ metadata:
   labels:
     eventing.knative.dev/brokerRole: filter
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
   name: broker-filter
   namespace: knative-eventing
@@ -537,8 +610,9 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
+    bindings.knative.dev/exclude: "true"
 spec:
   selector:
     matchLabels:
@@ -548,7 +622,7 @@ spec:
       labels:
         eventing.knative.dev/brokerRole: ingress
         app.kubernetes.io/component: broker-ingress
-        app.kubernetes.io/version: "20230727-ffa591593"
+        app.kubernetes.io/version: "20241019-6aa49dc1d"
         app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-ingress
@@ -556,8 +630,8 @@ spec:
       containers:
         - name: ingress
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/ingress@sha256:eb88ba217b52db3eb2eda82bc840f2307b578877d393a0766a5b91686e257715
-          readinessProbe: &probe
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/ingress@sha256:043c5992bf31e4be9323fe28f74b88a9633ed926d4219fc936989e805d3e1e1c
+          readinessProbe:
             failureThreshold: 3
             httpGet:
               path: /healthz
@@ -567,7 +641,14 @@ spec:
             successThreshold: 1
             timeoutSeconds: 1
           livenessProbe:
-            !!merge <<: *probe
+            failureThreshold: 3
+            httpGet:
+              path: /healthz
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 2
+            successThreshold: 1
+            timeoutSeconds: 1
             initialDelaySeconds: 5
           resources:
             requests:
@@ -627,7 +708,7 @@ metadata:
   labels:
     eventing.knative.dev/brokerRole: ingress
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
   name: broker-ingress
   namespace: knative-eventing
@@ -670,8 +751,9 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: mt-broker-controller
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
+    bindings.knative.dev/exclude: "true"
 spec:
   selector:
     matchLabels:
@@ -681,7 +763,7 @@ spec:
       labels:
         app: mt-broker-controller
         app.kubernetes.io/component: broker-controller
-        app.kubernetes.io/version: "20230727-ffa591593"
+        app.kubernetes.io/version: "20241019-6aa49dc1d"
         app.kubernetes.io/name: knative-eventing
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes.
@@ -699,7 +781,7 @@ spec:
       containers:
         - name: mt-broker-controller
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/mtchannel_broker@sha256:0ac6d0956cb573ebb6ed4f1c04549cd6bc29122046c7aac33270e8d93678a043
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/mtchannel_broker@sha256:1bb3a34c206dc46cadbe225ca79d4ac0b2d542a0146f187726cf111c1196f325
           resources:
             requests:
               cpu: 100m
@@ -756,7 +838,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
@@ -780,7 +862,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230727-ffa591593"
+    app.kubernetes.io/version: "20241019-6aa49dc1d"
     app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
